--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,4 +1,16 @@
 
 body{
-  
+  color: $default;
+  font-size: 15px;
+  line-height: 18px;
+  @extend %dmsans-500;
 }
+
+.container{
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+
+
