--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3,7 +3,102 @@
 @import 'reset';
 @import 'global';
 
+.header{
+  max-width: 1800px;
+  margin: 0 auto;
+  padding: 50px 15px 50px;
+  &__inner{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+.menu{
+  &__list{
+    display: flex;
+  }
+  &__list-item{
+    font-size: 18px;
+    line-height: 20px;
+  }
+  &__list-item + .menu__list-item{
+    padding-left: 35px;
+  }
+  &__list-link{
+    color: $accent; 
+    transition: all .3s; 
+    @extend %rubik-500
+  }
+}
 
+.user-nav{
+  display: flex;
+
+  &__link{
+    padding: 16px 16px;
+    position: relative;
+    background-color: coral;
+  }
+
+  &__link + .user-nav__link{
+    margin-left: 20px;
+  }
+
+  &__link--search{
+    background-color: #edf1f4;
+    border-radius: 50%;
+  }
+
+  &__link--heart{
+    padding: 16px 41px 16px 30px;
+    border-bottom-left-radius: 25px;
+    border-top-left-radius: 25px;
+    background-color: #fcd7b6;
+    position: relative;
+  }
+
+  &__link--heart::after{
+    content: "";
+    position: absolute;
+    height: 32px;
+    width: 1px;
+    background-color: #fde7d3;
+    top: 9px;
+    right: 0;
+  }
+
+  .user-nav &__link--kart{
+    background-color: #fcd7b6;
+    padding: 16px 30px 16px 41px; 
+    margin-left: 0px;  
+    border-bottom-right-radius: 25px;
+    border-top-right-radius: 25px; 
+
+  }
+
+  &__num{
+    position: absolute;
+    top: 7px;
+    right: 33px;
+    width: 16px;
+    height: 16px;
+    line-height: 16px;
+    color: $title;
+    background-color: #fff;
+    text-align: center;
+    border-radius: 50%;
+  }
+
+  &__link--kart &__num{
+    right: 22px;
+  }
+
+  &__link--points{
+    background-color: $bg-gray;
+    padding: 14px 16px 2px;
+    border-radius: 50%;
+  }
+}
 
 
 
