--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -2,6 +2,7 @@ $accent: #436372;
 $title: #243f4d;
 $default: #585858;
 $bg-gray: #a3bbc8;
+$accent-bg: #fef7f0;
 
 %dmsans-700{
   font-family: 'DMSans-Bold', sans-serif;
