--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,9 +1,20 @@
+html,
+body{
+  height: 100%;
+}
+
 
 body{
   color: $default;
   font-size: 15px;
   line-height: 18px;
   @extend %dmsans-500;
+  display: flex;
+  flex-direction: column;
+}
+
+.main{
+  flex-grow: 1;
 }
 
 .container{
