--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -5,6 +5,7 @@
 
 .header{
   max-width: 1800px;
+  width: 100%;
   margin: 0 auto;
   padding: 50px 15px 50px;
   &__inner{
@@ -100,7 +101,102 @@
   }
 }
 
+.footer{
+  background-color: #fff;
+}
 
+.footer-top{
+  padding: 100px 0 75px;
+  display: flex;
+  font-size: 14px;
+  line-height: 24px;
+  border-bottom: 1px solid #dae4e9;
+  &__logo{
+    margin-bottom: 22px;
+    display: inline-block;
+  }
+
+  &__contacts{
+    width: 200px;
+    margin-right: 100px;
+    margin-top: -12px;
+  }
+
+  &__services,
+  &__account{
+    width: 150px;
+    margin-right: 150px;
+  }
+
+  &__form{
+    max-width: 270px;
+  }
+
+  &__title{
+    font-size: 16px;
+    line-height: 21px;
+    color: #1f2044;
+    margin-bottom: 22px;
+    text-transform: uppercase;
+    // %dmsans-700;
+  }
+
+  &__item-adress{
+    display: block;
+    margin-bottom: 4px;
+  }
+
+  &__item-phone,
+  &__item-email{
+    color: $default;
+    line-height: 32px;
+  }
+
+  &__list-item{
+    margin-bottom: 8px;
+  }
+  &__form-text{
+    margin-bottom: 35px;
+  }
+  &__form-input{
+    background-color: $accent-bg;
+    height: 38px;
+    width: 170px;
+    border: none;
+    padding: 12px 10px 12px 14px;
+    &::placeholder{
+      color: #234969;
+      font-size: 12px;
+    }
+  }
+  &__form-btn{
+    background-color: $bg-gray;
+    border: none;
+    color: #fff;
+    padding: 7px 16px 7px 12px;
+    cursor: pointer;
+  }
+}
+.footer-bottom{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 29px 0;
+  font-size: 14px;
+  line-height: 32px;
+  color: #7b7b7b;
+  &__nav{
+    display: flex;
+  }
+
+  &__nav-link{
+    padding: 3px 10px 2px 10px;
+    line-height: 16px;
+  }
+  &__nav-link + .footer-bottom__nav-link{
+    border-left: 1px solid #7b7b7b;
+  }
+}
 
 
 @import 'media';
