--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -3,6 +3,7 @@ $title: #243f4d;
 $default: #585858;
 $bg-gray: #a3bbc8;
 $accent-bg: #fef7f0;
+$bg-orange: #fcd7b6;
 
 %dmsans-700{
   font-family: 'DMSans-Bold', sans-serif;
@@ -27,4 +28,11 @@ $accent-bg: #fef7f0;
 %rubik-400{
   font-family: 'Rubik-Regular', sans-serif;
   font-weight: 400;
+}
+
+@function max($numbers...) {
+  @return m#{a}x(#{$numbers});
+}
+@function min($numbers...) {
+  @return m#{i}n(#{$numbers});
 }
